# dabs-copilot

./: .gitignore  .mcp.json  CLAUDE.md  MCP_SERVER_FIX.md  PROJECT_PLAN.md  README.md  databricks.yml  env.example  list_workspace_files.py  litellm_config.yaml  pyproject.toml  requirements.txt  test_claude_sdk_mcp.py  test_databricks_connect.py  test_deployed_mcp.py  test_mcp_connection.py  test_phase1_complete.py  test_workspace_init.py
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  dab-analyzer.md  dab-deployer.md  dab-discovery.md  dab-generator.md  dab-orchestrator.md  dab-validator.md
.claude/commands/: setup-local-env.md
.claude/skills/databricks-asset-bundles/: SKILL.md
docs/: architecture.dot  custom-mcp-server.md  databricks-apps-mcp-server.md  databricks-asset-bundles.md
mcafee-vector-search-bundle/: databricks.yml
mcp/: .env.example  ARCHITECTURE_DESIGN.md  CLAUDE.md  CONFIG_ERROR_HANDLING.md  CONTEXT_INDEX.md  DATABRICKS_APPS_DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MCP_IMPROVEMENTS_PLAN.md  NOTEBOOK_CONTENT_STRATEGY.md  PHASE2_PROJECT_PLAN.md  README.md  TOOLS_SPECIFICATION.md  app.yaml  requirements.txt  test_context_generation.py  test_integration.py  test_local_mcp.py
mcp/context/: BEST_PRACTICES.md  CLUSTER_CONFIGS.md  DAB_PATTERNS.md  WORKFLOWS.md
mcp/evaluations/: databricks_mcp_eval.xml
mcp/scripts/: =  databricks_apps_utils.py  deploy.sh  quick_test.py  run_evaluation.py  setup_cli.sh  test_databricks_apps.py
mcp/server/: app.py  app_simple.py  config.yaml  main.py  old_app.py  test_direct_mcp.py  tools.py  tools_dab.py  tools_workspace.py  workspace_factory.py
mcp/server/config/: loader.py
mcp/server/services/: analysis_service.py  databricks_service.py  validation_service.py
mcp/tests/: __init__.py  test_analyze_notebook.py  test_tools.py  test_validate_bundle.py  test_workspace_factory.py
src/: DETAILED_PLANNING.md  IMPLEMENTATION_PLAN.md  README.md  SPRINT_PLANNING.md  __init__.py  main.py  test_interactive.py
src/agents/: __init__.py  base.py  orchestrator.py
src/api/: CLAUDE.md  QUICK_START.md  app.py  app.yaml  chat_handler.py  claude_client.py  deploy_config.sh  deploy_dab_generator.sh  main.py  models.py  package-lock.json  package.json  requirements.txt  setup_claude_cli.sh  setup_env.py  setup_secret.sh  simple_test.py  start_app.sh  streamlit_app.py  streamlit_app_enhanced.py  test_bundle_generation.py  test_claude_sdk.py  test_http_health.py  test_mcp_connection.py  test_oauth_auth.py  test_remote_mcp.py
src/api/static/: chat.js  index.html  style.css  test.html
src/config/: __init__.py  settings.py
src/dabs_copilot/: CLI_IMPLEMENTATION_PLAN.md  HYBRID_ANALYSIS_PLAN.md  SDK_SIMPLIFICATION_PLAN.md  __init__.py  agent.py  interactive_test.py  prompts.py  test_agent_config.py  test_integration.py  test_prompts.py
src/dabs_copilot/cli/: __init__.py  auth.py  main.py  output.py  utils.py
src/dabs_copilot/tools/: __init__.py  (+3 more)
src/examples/: custom_mcp_example.py  databricks_job_dab_example.py  mcp_calculator.py  quick_start.py  streaming_mode.py
src/tests/: __init__.py  test_config.py
src/tools/: __init__.py  mcp_client.py
tests/: test_agent.py  test_custom_tools.py  test_enhanced_analysis.py
(+20 files in other folders)
