[project]
name = "dabs-copilot"
version = "1.4.0"
description = "Conversational AI for Databricks Asset Bundles"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Databricks", email = "feedback@databricks.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["databricks", "asset-bundles", "dab", "cli", "ai", "llm"]

dependencies = [
    # CLI Framework
    "typer[all]>=0.9.0",
    "rich>=13.9.4",
    "websockets>=14.0",

    # Claude Agent SDK
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.18.0",

    # Databricks
    "databricks-sdk>=0.65.0",
    "databricks-connect>=17.1.0",

    # LiteLLM for proxy support (Databricks FMAPI)
    "litellm>=1.40.0",
    "litellm[proxy]",

    # Environment and Configuration
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.1",

    # Async HTTP
    "aiohttp>=3.9.0",

    # MCP
    "mcp>=1.12.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "ipython>=8.0.0",
]

mlflow = [
    "mlflow>=3.5.0",
]

all = [
    "dabs-copilot[dev,mlflow]",
]

[project.scripts]
dabs-copilot = "dabs_copilot.cli.main:app"

[project.urls]
Homepage = "https://github.com/databricks/dabs-copilot"
Documentation = "https://github.com/databricks/dabs-copilot#readme"
Repository = "https://github.com/databricks/dabs-copilot"
Issues = "https://github.com/databricks/dabs-copilot/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yaml", "*.yml"]

# Code formatting
[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Linting
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["dabs_copilot"]

# Type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "build",
    "dist",
    ".venv",
]

# Testing
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
